--- a/templates/todo/home.html
+++ b/templates/todo/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {% load staticfiles %}
+{% load static %}
 <html>
 	<head>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
@@ -22,6 +23,7 @@
 					<form method="post">{% csrf_token %}
 						<hr>
 						{{ form }}
+						<button class="btn btn-danger">Add</button>
 						<hr>
 					</form>
 				</div>
