--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -33,6 +33,7 @@
 	<div class="limiter">
 		<div class="container-login100" style="background-image: url('{% static 'register/images/bg-01.jpg' %}');">
 			<div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
+				<center><a href="{% url 'home' %}">Home</a></center>
 				<form class="login100-form validate-form" method="post">{% csrf_token %}
 					<span class="login100-form-title p-b-49">
 						Login
@@ -83,6 +84,14 @@
 	<script src="{% static 'register/vendor/countdowntime/countdowntime.js' %}"></script>
 <!--===============================================================================================-->
 	<script src="{% static 'register/js/main.js' %}"></script>
+
+	
+	<style type="text/css">
+		::selection {
+			color: white;
+			background-color: black;
+		}
+	</style>
 
 </body>
 </html>
