--- a/templates/registration/sign.html
+++ b/templates/registration/sign.html
@@ -33,6 +33,7 @@
 	<div class="limiter">
 		<div class="container-login100" style="background-image: url('{% static 'register/images/bg-01.jpg' %}');">
 			<div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
+				<center><a href="{% url 'home' %}">Home</a></center>
 				<form action="{% url 'sign' %}" class="login100-form validate-form" method="post">{% csrf_token %}
 					<span class="login100-form-title p-b-49">
 						Sign In
@@ -56,15 +57,15 @@
 					</div>
 
 					<div class="flex-c-m">
-						<a href=""  class="login100-social-item bg1">
+						<a href=""  class="login100-social-item bg1" onclick="alert('Work in prgress')">
 							<i class="fa fa-facebook"></i>
 						</a>
 
-						<a href="" class="login100-social-item bg2">
+						<a href="" class="login100-social-item bg2" onclick="alert('Work in prgress')">
 							<i class="fa fa-twitter"></i>
 						</a>
 
-						<a href="" class="login100-social-item bg3">
+						<a href="" class="login100-social-item bg3" onclick="alert('Work in prgress')">
 							<i class="fa fa-google"></i>
 						</a>
 					</div>
@@ -102,6 +103,13 @@
 	<script src="{% static 'register/vendor/countdowntime/countdowntime.js' %}"></script>
 <!--===============================================================================================-->
 	<script src="{% static 'register/js/main.js' %}"></script>
+
+	<style type="text/css">
+		::selection {
+			color: white;
+			background-color: black;
+		}
+	</style>
 
 </body>
 </html>
