--- a/templates/registration/thank.html
+++ b/templates/registration/thank.html
@@ -1,9 +1,10 @@
 <html lang="en">
 {% load static %}
 <head>
-	<meta charset="utf-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- Required meta tags -->
+	    <meta charset="utf-8">
+	    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 	<link rel="icon" type="image/png" href="{% static 'register/images/icons/favicon.ico' %}"/>
 	<title>Thank You!!</title>
@@ -21,12 +22,12 @@
 </head>
 <body>
 	<header class="site-header" id="header">
-		<h1 class="site-header__title" data-lead-id="site-header-title">THANK <span style="color: red;">YOU!</span></h1>
+		<h1 class="site-header__title" data-lead-id="site-header-title">THANK <span style="color: red;">YOU!</span> {{ thank_user }}</h1>
 	</header>
 
 	<div class="main-content">
 		<i class="fa fa-check main-content__checkmark" id="checkmark"></i>
-		<p class="main-content__body" data-lead-id="main-content-body">For giving us your precious Time</p><br>
+		<p class="main-content__body" data-lead-id="main-content-body">For giving us your precious Time {{ a }}</p><br>
 		<a href="{% url 'home' %}"><button class="bubbly-button">Home Page</button></a>
 	</div>
 
